--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="css/new-age.css" rel="stylesheet">
-    <link href="css/nxt-component.css" rel="stylesheet">
+    <link href="css/nxt-site.css" rel="stylesheet">
 
   </head>
 
@@ -67,8 +66,8 @@
     </nav>
 
     <header class="masthead">
-      <div class="container h-100">
-        <div class="row h-100">
+      <div class="container">
+        <div class="row">
           <div class="col-lg-7 my-auto">
             <div class="header-content">
               <h1 class="mb-5">NxtPOS 簡單易用的</h1>
@@ -78,7 +77,7 @@
               </p>
               <div class="play-wrapper">
                 <img src="img/icon-play/icon-play.png" class="icon-play" />
-                <p class="icon-play-title">播放《美髮零售業 美好的一天》</p>
+                <span>播放《美髮零售業 美好的一天》</span>
               </div>            
             </div>
           </div>
@@ -120,7 +119,7 @@
       </div>
     </section>
 
-    <section class="features" id="features">
+    <section class="features-chain-store">
       <div class="container-fluid">
         <div class="chain-store-image-wrapper">
           <div class="line">
@@ -128,32 +127,126 @@
           <div class="oval-copy"></div>
           </div>
           <div class="tab-single-store">
-            <div class="bubble single-store-bubble">
+            <div class="bubble">
               <p>第一家店</p>
             </div>
           </div>
-<!--           <div class="tab-inactive-wrapper">
-            <div class="inactive-bubble">
+          <div class="tab-chain-store">
+            <div class="bubble">
               <p>多家店：連鎖經營</p>
             </div>
-          </div> -->
+          </div>
         </div>        
         <div class="title-wrapper">
           <h2 class="title">店家：連鎖經營</h2>
           <p class="title-desc">從小而大是每位經營者的夢想，但您的系統可以陪您一起成長嗎？</p>
         </div>
+
+        <div class="single-store-content">
+          <div class="row">
+            <div class="col-md-6 col-xs-12">
+              <img class="single-store-image" src="img/ui-overview/ui-overview.png" />
+            </div>
+            <div class="col-md-6 col-xs-12">
+              <div class="single-store-info-list">
+                <img class="single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
+                <div class="single-store-desc">
+                  <p class="word-title">
+                    建議
+                    <span class="word-emphasized"> 進 </span>
+                    貨與採購的最佳時機
+                  </p>
+                  <p class="word-description">不再依靠經驗，轉而使用數據來決定進貨時間點。</p>
+                </div>
+              </div>
+
+              <div class="single-store-info-list">
+                <img class="single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
+                <div class="single-store-desc">
+                  <p class="word-title">
+                    掌握
+                    <span class="word-emphasized"> 銷 </span>
+                    售變動  店內資訊隨手可得
+                  </p>
+                  <p class="word-description">隨時隨地掌握店內銷售狀況，經由即時分析報表，讓管理更能專注在成長。</p>
+                </div>
+              </div>
+
+              <div class="single-store-info-list">
+                <img class="single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
+                <div class="single-store-desc">
+                  <p class="word-title">
+                    緊盯
+                    <span class="word-emphasized"> 存 </span>
+                    貨狀況  存的越少銷的更多
+                  </p>
+                  <p class="word-description">減低庫存量，提升存貨周轉率，資金運用最大化。</p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        
+
+        <img class="bg-run-business" src="img/bg-run-business/bg-run-business.png" />
       </div>
     </section>
 
-    <section class="cta">
-      <div class="cta-content">
-        <div class="container">
-          <h2>Stop waiting.<br>Start building.</h2>
-          <a href="#contact" class="btn btn-outline btn-xl">Let's Get Started!</a>
+    <section class="reservation">
+      <div class="container-fluid">
+        <div class="reservation-title-wrapper">
+          <p class="reservation-title">預約不只是預約</p>
+          <p class="reservation-text">您的顧客除了電話，可以用手機、網頁來預約嗎？您的網站、各大網站、部落格、粉絲團、App，都可以預約嗎？您有因為人為失誤而造成重複預約嗎？</p>
+        </div>
+        <div class="row">
+          <div class="col-md-7 col-xs-12">
+            <div class="reservation-image-container">
+              <img class="reservation-image" src="img/ui-reservation1/ui-reservation-1.png" />
+            </div>
+          </div>
+
+          <div class="col-md-5 col-xs-12">
+            <div class="reservation-desc">
+              <p className="benifit-layer">我們的預約可以給您的顧客帶來更多選擇，<b>減低錯誤的發生率</b>，增加<b>增加方便性</b>，更可以提高店家的曝光率。</p>
+              <a href="#">看更多介紹 > </a>
+            </div>
+
+          </div>
+        </div>
+        <div class="reservation-bottom-desc">
+          <p>服務業進階化：預約時掌握顧客的喜好</p>
+          <img src="img/icon-arrowdown/icon-arrowdown.png"/>
         </div>
       </div>
-      <div class="overlay"></div>
     </section>
+
+    <section class="service">
+      <div class="container-fluid">
+        <div class="service-title-wrapper">
+          <p class="service-title">服務可以更貼近人心</p>
+          <p class="service-text">服務可以更貼近人心 您瞭解您所有的顧客嗎？顧客最後一次到訪時間？ 顧客上一次的髮型？服務業的價值來自於多那一點打動人心的服務</p>
+        </div>
+        <div class="row">
+          <div class="col-md-5 col-xs-12">
+            <div class="service-desc">
+              <p className="benifit-layer">記錄下每一次的服務和喜好，提供給顧客更完善的服務，讓來過的都成為您忠實的顧客。</p>
+              <a href="#">看更多介紹 > </a>
+            </div>
+
+          </div>
+
+          <div class="col-md-7 col-xs-12">
+            <div class="service-image-container">
+              <img class="service-image" src="img/ui-service/ui-service.png" />
+            </div>
+          </div>
+
+          
+        </div>
+      </div>
+    </section>
+
 
     <section class="contact bg-primary" id="contact">
       <div class="container">
@@ -205,7 +298,7 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/new-age.min.js"></script>
+    <script src="js/nxt-site.min.js"></script>
 
   </body>
 
