--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav">
-            <li class="nav-item">
+<!--             <li class="nav-item">
               <a class="nav-link">總覽</a>
             </li>
             <li class="nav-item">
@@ -56,6 +56,21 @@
             </li>
             <li class="nav-item">
               <a class="nav-link">加入體驗名單</a>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link">功能介紹</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">智能預約</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">詳細功能</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">顧客經營</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">搶先體驗</a>
             </li>
           </ul>
         </div>
@@ -65,16 +80,17 @@
     <header class="masthead">
       <div class="container">
         <div class="row">
-          <div class="col-lg-7 my-auto">
+          <div class="col-lg-7">
             <div class="header-content">
-              <h1 class="mb-5">NxtPOS 簡單易用的</h1>
-              <h1 class="mb-5">iPad POS 系統</h1>
-              <p>
+              <h1 class="bold text-xl">NxtPOS 簡單易用的</h1>
+              <h1 class="bold text-xl">iPad POS 系統</h1>
+              <p class="text-sm">
                 顧客預約、店家管理、報表分析，一目了然
               </p>
               <div class="play-wrapper">
                 <img src="img/icon-play/icon-play.png" class="icon-play" />
-                <span>播放《美髮零售業 美好的一天》</span>
+                &nbsp;
+                <span class="text-xs">播放《美髮零售業 美好的一天》</span>
               </div>            
             </div>
           </div>
@@ -88,36 +104,36 @@
         <div class="row">
           <div class="col-md-4 col-xs-12">
             <img src="img/benefit-1/benefit-1.png" class="benefit-img" />
-            <p class="benefit-title">省下
-              <span class="emphasized-word"> 50% </span>
+            <p class="bold text-sm">省下
+              <span class="bold text-md blue"> 50% </span>
               人力與資源
             </p>
-            <p class="benefit-word">讓你用一台iPad，代替傳統店</p>
-            <p class="benefit-word">長、會計、櫃檯、顧問</p>
+            <p class="text-xs grey mt-1">讓你用一台iPad，代替傳統店</p>
+            <p class="text-xs grey">長、會計、櫃檯、顧問</p>
           </div>
           <div class="col-md-4 col-xs-12">
             <img src="img/benefit-2/benefit-2.png" class="benefit-img" />
-            <p class="benefit-title">回客率增加
-              <span class="emphasized-word"> 60%</span>
+            <p class="bold text-sm">回客率增加
+              <span class="bold text-md blue"> 60%</span>
             </p>
-            <p class="benefit-word">紙張紀錄的時代已過去，電腦用數</p>
-            <p class="benefit-word">據告訴你：「客人最想要什麼？</p>
+            <p class="text-xs grey mt-1">紙張紀錄的時代已過去，電腦用數</p>
+            <p class="text-xs grey">據告訴你：「客人最想要什麼？</p>
           </div>
           <div class="col-md-4 col-xs-12">
             <img src="img/benefit-3/benefit-3.png" class="benefit-img" />
-            <p class="benefit-title">
-              <span class="emphasized-word">100% </span>
+            <p class="bold text-sm">
+              <span class="bold text-md blue">100% </span>
               廣告免錢
             </p>
-            <p class="benefit-word">駭客行銷！預約人數愈多，</p>
-            <p class="benefit-word">你的品牌曝光度愈高</p>
+            <p class="text-xs grey mt-1">駭客行銷！預約人數愈多，</p>
+            <p class="text-xs grey">你的品牌曝光度愈高</p>
           </div>
         </div>
       </div>
     </section>
 
     <section class="features-chain-store">
-      <div class="container-fluid">
+      <div class="container-fluid mb-100">
         <div class="chain-store-image-wrapper">
           <div class="line">
           <div class="oval"></div>
@@ -135,8 +151,8 @@
           </div>
         </div>        
         <div class="title-wrapper">
-          <h2 class="title">店家：連鎖經營</h2>
-          <p class="title-desc">從小而大是每位經營者的夢想，但您的系統可以陪您一起成長嗎？</p>
+          <p class="bold text-xl">店家：連鎖經營</p>
+          <p class="grey mt-2 mb-4 ml-2">從小而大是每位經營者的夢想，但您的系統可以陪您一起成長嗎？</p>
         </div>
 
         <div class="multi-store-content">
@@ -148,9 +164,6 @@
               <li class="items right-pos" id="2">
                 <img src="img/product-product-info/product-product-info.jpg"/>
               </li>
-<!--               <li class="items back-pos" id="3">
-                <img src="img/report-overview-today/report-overview-today.jpg"/>
-              </li> -->
               <li class="items left-pos" id="3">
                 <img src="img/report-overview-today/report-overview-today.jpg"/>
               </li>
@@ -160,17 +173,6 @@
               <input type="button" value="Next" id="next">
             </span>
           </div>
-          <!-- <div class="multi_store">
-            <div>
-              <img class="multi-store-image" src="img/staffs-time-card/staffs-time-card.jpg" />
-            </div>
-            <div>
-              <img class="multi-store-image" src="img/report-overview-today/report-overview-today.jpg" />
-            </div>
-            <div>
-              <img class="multi-store-image" src="img/product-product-info/product-product-info.jpg" />
-            </div>
-          </div>       -->
         </div>
 
         <div class="single-store-content">
@@ -179,48 +181,45 @@
               <img class="single-store-image" src="img/ui-overview/ui-overview.png" />
             </div>
             <div class="col-md-6 col-xs-12">
-              <div class="single-store-info-list">
-                <img class="single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
+              <div class="ml-5 single-store-info-list mt-50">
+                <img class="mr-4 single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
                 <div class="single-store-desc">
-                  <p class="word-title">
+                  <p class="text-md">
                     建議
-                    <span class="word-emphasized"> 進 </span>
+                    <span class="blue"> 進 </span>
                     貨與採購的最佳時機
                   </p>
-                  <p class="word-description">不再依靠經驗，轉而使用數據來決定進貨時間點。</p>
+                  <p class="grey">不再依靠經驗，轉而使用數據來決定進貨時間點。</p>
                 </div>
               </div>
 
-              <div class="single-store-info-list">
-                <img class="single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
+              <div class="ml-5 single-store-info-list mt-50">
+                <img class="mr-4 single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
                 <div class="single-store-desc">
-                  <p class="word-title">
+                  <p class="text-md">
                     掌握
-                    <span class="word-emphasized"> 銷 </span>
+                    <span class="blue"> 銷 </span>
                     售變動  店內資訊隨手可得
                   </p>
-                  <p class="word-description">隨時隨地掌握店內銷售狀況，經由即時分析報表，讓管理更能專注在成長。</p>
+                  <p class="grey">隨時隨地掌握店內銷售狀況，經由即時分析報表，讓管理更能專注在成長。</p>
                 </div>
               </div>
 
-              <div class="single-store-info-list">
-                <img class="single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
+              <div class="ml-5 single-store-info-list mt-50">
+                <img class="mr-4 single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
                 <div class="single-store-desc">
-                  <p class="word-title">
+                  <p class="text-md">
                     緊盯
-                    <span class="word-emphasized"> 存 </span>
+                    <span class="blue"> 存 </span>
                     貨狀況  存的越少銷的更多
                   </p>
-                  <p class="word-description">減低庫存量，提升存貨周轉率，資金運用最大化。</p>
+                  <p class="grey">減低庫存量，提升存貨周轉率，資金運用最大化。</p>
                 </div>
               </div>
 
             </div>
           </div>
         </div>
-        
-
-        <img class="bg-run-business" src="img/bg-run-business/bg-run-business.png" />
       </div>
     </section>
 
