--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section class="intro text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 col-xs-12">
+          <div class="col-md-4 col-xs-12 mt-3 mb-3">
             <img src="img/benefit-1/benefit-1.png" class="benefit-img" />
             <p class="bold text-sm">省下
               <span class="bold text-md blue"> 50% </span>
@@ -111,7 +111,7 @@
             <p class="text-xs grey mt-1">讓你用一台iPad，代替傳統店</p>
             <p class="text-xs grey">長、會計、櫃檯、顧問</p>
           </div>
-          <div class="col-md-4 col-xs-12">
+          <div class="col-md-4 col-xs-12 mt-3 mb-3">
             <img src="img/benefit-2/benefit-2.png" class="benefit-img" />
             <p class="bold text-sm">回客率增加
               <span class="bold text-md blue"> 60%</span>
@@ -119,7 +119,7 @@
             <p class="text-xs grey mt-1">紙張紀錄的時代已過去，電腦用數</p>
             <p class="text-xs grey">據告訴你：「客人最想要什麼？</p>
           </div>
-          <div class="col-md-4 col-xs-12">
+          <div class="col-md-4 col-xs-12 mt-3 mb-3">
             <img src="img/benefit-3/benefit-3.png" class="benefit-img" />
             <p class="bold text-sm">
               <span class="bold text-md blue">100% </span>
@@ -184,7 +184,7 @@
               <div class="ml-5 single-store-info-list mt-50">
                 <img class="mr-4 single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
                 <div class="single-store-desc">
-                  <p class="text-md">
+                  <p class="text-sm">
                     建議
                     <span class="blue"> 進 </span>
                     貨與採購的最佳時機
@@ -196,7 +196,7 @@
               <div class="ml-5 single-store-info-list mt-50">
                 <img class="mr-4 single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
                 <div class="single-store-desc">
-                  <p class="text-md">
+                  <p class="text-sm">
                     掌握
                     <span class="blue"> 銷 </span>
                     售變動  店內資訊隨手可得
@@ -208,7 +208,7 @@
               <div class="ml-5 single-store-info-list mt-50">
                 <img class="mr-4 single-store-icon" src="img/icon-manage-1/icon-manage-1.png" />
                 <div class="single-store-desc">
-                  <p class="text-md">
+                  <p class="text-sm">
                     緊盯
                     <span class="blue"> 存 </span>
                     貨狀況  存的越少銷的更多
@@ -224,50 +224,53 @@
     </section>
 
     <section class="reservation">
-      <div class="container-fluid">
-        <div class="reservation-title-wrapper">
-          <p class="reservation-title">預約不只是預約</p>
-          <p class="reservation-text">您的顧客除了電話，可以用手機、網頁來預約嗎？您的網站、各大網站、部落格、粉絲團、App，都可以預約嗎？您有因為人為失誤而造成重複預約嗎？</p>
+      <div class="container">
+        <div>
+          <p class="text-lg text-center">預約不只是預約</p>
+          <p class="grey text-center mt-4">您的顧客除了電話，可以用手機、網頁來預約嗎？</p>
+          <p class="grey text-center"> 您的網站、各大網站、部落格、粉絲團、App，都可以預約嗎？您有因為人為失誤而造成重複預約嗎？
+          </p>
         </div>
-        <div class="row">
-          <div class="col-md-7 col-xs-12">
-            <div class="reservation-image-container">
+        <div class="row mt-50">
+          <div class="col-md-6 col-xs-12">
+            <div class="text-center">
               <img class="reservation-image" src="img/ui-reservation1/ui-reservation-1.png" />
             </div>
           </div>
 
-          <div class="col-md-5 col-xs-12">
+          <div class="col-md-6 col-xs-12">
             <div class="reservation-desc">
-              <p class="benifit-layer">我們的預約可以給您的顧客帶來更多選擇，<b>減低錯誤的發生率</b>，增加<b>增加方便性</b>，更可以提高店家的曝光率。</p>
-              <a href="#">看更多介紹 > </a>
+              <p class="grey">我們的預約可以給您的顧客帶來更多選擇，<span class="bold black">減低錯誤的發生率</span>，增加<b>增加方便性</b>，更可以提高店家的曝光率。</p>
+              <a href="#">看更多介紹 </a>
             </div>
 
           </div>
         </div>
-        <div class="reservation-bottom-desc">
-          <p>服務業進階化：預約時掌握顧客的喜好</p>
+        <div class="text-center mt-50">
+          <p class="blue">服務業進階化：預約時掌握顧客的喜好</p>
           <img src="img/icon-arrowdown/icon-arrowdown.png"/>
         </div>
       </div>
     </section>
 
     <section class="service">
-      <div class="container-fluid">
+      <div class="container">
         <div class="service-title-wrapper">
-          <p class="service-title">服務可以更貼近人心</p>
-          <p class="service-text">服務可以更貼近人心 您瞭解您所有的顧客嗎？顧客最後一次到訪時間？ 顧客上一次的髮型？服務業的價值來自於多那一點打動人心的服務</p>
+          <p class="text-lg text-center">服務可以更貼近人心</p>
+          <p class="grey text-center mt-4">服務可以更貼近人心 您瞭解您所有的顧客嗎？顧客最後一次到訪時間？</p>
+          <p class="grey text-center">顧客上一次的髮型？服務業的價值來自於多那一點打動人心的服務</p>
         </div>
-        <div class="row">
-          <div class="col-md-5 col-xs-12">
+        <div class="row mt-50">
+          <div class="col-md-6 col-xs-12">
             <div class="service-desc">
-              <p class="benifit-layer">記錄下每一次的服務和喜好，提供給顧客更完善的服務，讓來過的都成為您忠實的顧客。</p>
-              <a href="#">看更多介紹 > </a>
+              <p class="bold">記錄下每一次的服務和喜好，提供給顧客更完善的服務，<span class="grey">讓來過的都成為您忠實的顧客。</span></p>
+              <a href="#">看更多介紹 </a>
             </div>
 
           </div>
 
-          <div class="col-md-7 col-xs-12">
-            <div class="service-image-container">
+          <div class="col-md-6 col-xs-12">
+            <div class="text-center">
               <img class="service-image" src="img/ui-service/ui-service.png" />
             </div>
           </div>
@@ -278,7 +281,7 @@
     </section>
 
 
-    <section class="mail">
+<!--     <section class="mail">
       <div class="row">
         <div class="col-md-4 col-xs-12">
           <div class="benefit-wrapper">
@@ -327,7 +330,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <footer>
       <div class="container-fluid">
