--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="#page-top">NxtPOS</a>
+        <a class="navbar-brand" href="#page-top">
+          <img class="logo-white-image" src="img/cloud-white.png" />
+          <img class="logo-black-image" src="img/cloud-black.png" />
+          <span class="logo-text">NxtPOS</span>
+        </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -84,11 +88,11 @@
               <p class="text-sm">
                 顧客預約、店家管理、報表分析，一目了然
               </p>
-              <div class="play-wrapper">
+<!--               <div class="play-wrapper">
                 <img src="img/icon-play.png" class="icon-play" />
                 &nbsp;
                 <span class="text-xs">播放《美髮零售業 美好的一天》</span>
-              </div>            
+              </div>   -->          
             </div>
           </div>
           
@@ -161,7 +165,7 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="img/staffs-time-card@3x.png" alt="First slide">
+                <img class="d-block w-100" src="img/staffs_timeCard.png" alt="First slide">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="img/product-product-info@3x.png" alt="Second slide">
@@ -175,7 +179,7 @@
 
           <ul class="custom-carousel">
             <li class="items main-pos" id="1">
-              <img src="img/staffs-time-card@3x.png" />
+              <img src="img/staffs_timeCard.png" />
             </li>
             <li class="items right-pos" id="2">
               <img src="img/product-product-info@3x.png"/>
@@ -187,7 +191,7 @@
           <div class="row">
             <div class="col-md-6 col-xs-12">
               <div class="feature-box right">
-                <img class="mr-3" src="img/icon-idcard.png" />
+                <img src="img/icon-idcard.png" />
                 <div class="item-text">
                   <p class="text-sm bold ">
                     員工
@@ -200,7 +204,7 @@
             </div>
             <div class="col-md-6 col-xs-12">
               <div class="feature-box left">
-                <img class="mr-3" src="img/icon-product.png" />
+                <img src="img/icon-product.png" />
                 <div class="item-text">
                   <p class="text-sm bold ">
                     產品
@@ -216,7 +220,7 @@
           <div class="row">
             <div class="col-md-6 col-xs-12">
               <div class="feature-box right">
-                <img class="mr-3" src="img/icon-instock.png" />
+                <img src="img/icon-instock.png" />
                 <div class="item-text">
                   <p class="text-sm bold ">
                     庫存
@@ -229,7 +233,7 @@
             </div>
             <div class="col-md-6 col-xs-12">
               <div class="feature-box left">
-                <img class="mr-3" src="img/icon-data.png" />
+                <img src="img/icon-data.png" />
                 <div class="item-text">
                   <p class="text-sm bold ">
                     資訊
@@ -252,7 +256,7 @@
         <div class="single-store-content">
           <div class="row">
             <div class="col-md-6 col-xs-12">
-              <img class="single-store-image" src="img/ui-overview@3x.png" />
+              <img class="mt-50 single-store-image" src="img/register-service@3x.png" />
             </div>
             <div class="col-md-6 col-xs-12">
               <div class="ml-5 single-store-info-list mt-50">
@@ -390,7 +394,7 @@
         </div>
         <div class="row mt-50">
           <div class="col-xs-12 col-md-6">
-            <img class="trial-image" src="img/ipad-screenshot.png">
+            <img class="trial-image" src="img/ipad-screenshot@3x.png">
           </div>
           <div class="col-xs-12 col-md-6 mb-3">
 
